# moz-forecasting

./: .dockerignore  .gitignore  Dockerfile  README.md  backfill.py  pyproject.toml
.circleci/: config.yml  workflows.yml
flows/: ad_tiles_forecast.py
moz_forecasting/ad_tiles_forecast/: README.md  config.yaml  config_2025_planning.yaml  config_2025_planning_baseline.yaml  config_2025_planning_stretch.yaml  flow.py
moz_forecasting/mobile_ad_tiles/: README.md  config.yaml  flow.py
moz_forecasting/native/: README.md  config.yaml  flow.py
tests/: test_ads_tiles_forecast.py
