[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "moz-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "db-dtypes>=1.3.0",
    "google-cloud-bigquery>=3.25.0",
    "gspread>=6.1.2",
    "ipykernel>=6.29.5",
    "metaflow>=2.12.19",
    "numpy>=2.1.1",
    "outerbounds[gcp]>=0.3.99",
    "pandas>=2.2.2",
    "pip>=24.2",
    "proto-plus==1.24.0.dev1",
    "pytest>=8.3.3",
]
