[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "moz-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "db-dtypes>=1.3.0",
    "google-cloud-bigquery>=3.25.0",
    "gspread>=6.1.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "metaflow>=2.12.19",
    "numpy>=2.1.1",
    "outerbounds[gcp]>=0.3.99",
    "pandas>=2.2.2",
    "pip>=24.2",
    "proto-plus==1.24.0.dev1",
    "pytest>=8.3.3",
    "scikit-learn>=1.5.2",
]


[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__"]
target-version = "py310"

[tool.ruff.lint]
ignore = ["E741", "RUF005"]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
    "D"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
